Fix section listing alignment when x-wide

--- a/assets/sass/patterns/molecules/section-listing.scss
+++ b/assets/sass/patterns/molecules/section-listing.scss
@@ -40,6 +40,7 @@
 
     .section-listing {
       column-count: 3;
+      column-gap: 2.25rem;
     }
 
     .section-listing__list_item {
